--- a/04_03.ipynb
+++ b/04_03.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPw5ch52BFunOi35n4bfcRs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -48,6 +47,148 @@
       "source": [
         "print(\"hello world\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install --upgrade objaverse\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "29STvKx7cs4a",
+        "outputId": "dd538462-226a-4008-d9b3-5a8232501ecb"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: objaverse in /usr/local/lib/python3.10/dist-packages (0.1.7)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.10/dist-packages (from objaverse) (2.31.0)\n",
+            "Requirement already satisfied: pandas in /usr/local/lib/python3.10/dist-packages (from objaverse) (1.5.3)\n",
+            "Requirement already satisfied: pyarrow in /usr/local/lib/python3.10/dist-packages (from objaverse) (14.0.2)\n",
+            "Requirement already satisfied: tqdm in /usr/local/lib/python3.10/dist-packages (from objaverse) (4.66.2)\n",
+            "Requirement already satisfied: loguru in /usr/local/lib/python3.10/dist-packages (from objaverse) (0.7.2)\n",
+            "Requirement already satisfied: fsspec>=2022.11.0 in /usr/local/lib/python3.10/dist-packages (from objaverse) (2023.6.0)\n",
+            "Requirement already satisfied: gputil==1.4.0 in /usr/local/lib/python3.10/dist-packages (from objaverse) (1.4.0)\n",
+            "Requirement already satisfied: python-dateutil>=2.8.1 in /usr/local/lib/python3.10/dist-packages (from pandas->objaverse) (2.8.2)\n",
+            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.10/dist-packages (from pandas->objaverse) (2023.4)\n",
+            "Requirement already satisfied: numpy>=1.21.0 in /usr/local/lib/python3.10/dist-packages (from pandas->objaverse) (1.25.2)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests->objaverse) (3.3.2)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests->objaverse) (3.6)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests->objaverse) (2.0.7)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests->objaverse) (2024.2.2)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.8.1->pandas->objaverse) (1.16.0)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import objaverse as obx\n",
+        "obx.__version__"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "hvClQUfZdLCV",
+        "outputId": "331cc957-e835-4a8c-f252-522d867357f6"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'0.1.7'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "uids = obx.load_uids()\n",
+        "len(uids), type(uids)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZkYUxsEldR6V",
+        "outputId": "8b1bef03-50ca-4591-ef55-f6366196abbb"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(798759, list)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "uids[:10]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "V1DHhXY8dZnL",
+        "outputId": "9e9bcbda-cb99-48b9-89f6-f1d2029e5b5e"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['8476c4170df24cf5bbe6967222d1a42d',\n",
+              " '8ff7f1f2465347cd8b80c9b206c2781e',\n",
+              " 'c786b97d08b94d02a1fa3b87d2e86cf1',\n",
+              " '139331da744542009f146018fd0e05f4',\n",
+              " 'be2c02614d774f9da672dfdc44015219',\n",
+              " 'efd35e7d21ac482688c294e3b6c9f74e',\n",
+              " '21d5f90dbc9f4f229b0faa7b56b67f3e',\n",
+              " 'dcd33159a0864de388de3a08f55e604a',\n",
+              " 'a7ad32b5d4d84ee5a40ebbd86da4dbe4',\n",
+              " '7d6a14874eed48c2b720f0d1adfe6dd9']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "annotations = obx.load_annotations(uids)"
+      ],
+      "metadata": {
+        "id": "J31pnTNPdduV"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
