--- a/04_03.ipynb
+++ b/04_03.ipynb
@@ -201,15 +201,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f4ddab38-3d6a-45e0-e4be-3c0fd3aba90b"
+        "outputId": "590eb1b1-75e8-45b3-94d4-de205f5527e5"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            " 99%|█████████▉| 159/160 [02:50<00:01,  1.07s/it]\n"
+            " 99%|█████████▉| 159/160 [02:23<00:00,  1.11it/s]\n"
           ]
         }
       ]
@@ -221,24 +221,121 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 141
+          "base_uri": "https://localhost:8080/"
         },
         "id": "pOxFXZrZvvzp",
-        "outputId": "2be847a5-9389-4570-9397-27b9440010dc"
+        "outputId": "3dceb2ff-423f-4fae-8815-93fa7006abe7"
       },
-      "execution_count": 11,
+      "execution_count": 20,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'annotations' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-11-abd199d561ef>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mannotations\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0muids\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'annotations' is not defined"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'uri': 'https://api.sketchfab.com/v3/models/8476c4170df24cf5bbe6967222d1a42d',\n",
+              " 'uid': '8476c4170df24cf5bbe6967222d1a42d',\n",
+              " 'name': 'Iain_Dawson_Kew_Road_Formby',\n",
+              " 'staffpickedAt': None,\n",
+              " 'viewCount': 4,\n",
+              " 'likeCount': 0,\n",
+              " 'animationCount': 0,\n",
+              " 'viewerUrl': 'https://sketchfab.com/3d-models/8476c4170df24cf5bbe6967222d1a42d',\n",
+              " 'embedUrl': 'https://sketchfab.com/models/8476c4170df24cf5bbe6967222d1a42d/embed',\n",
+              " 'commentCount': 0,\n",
+              " 'isDownloadable': True,\n",
+              " 'publishedAt': '2021-03-18T09:36:25.430631',\n",
+              " 'tags': [{'name': 'stair',\n",
+              "   'slug': 'stair',\n",
+              "   'uri': 'https://api.sketchfab.com/v3/tags/stair'},\n",
+              "  {'name': 'staircase',\n",
+              "   'slug': 'staircase',\n",
+              "   'uri': 'https://api.sketchfab.com/v3/tags/staircase'},\n",
+              "  {'name': 'staircon',\n",
+              "   'slug': 'staircon',\n",
+              "   'uri': 'https://api.sketchfab.com/v3/tags/staircon'}],\n",
+              " 'categories': [],\n",
+              " 'thumbnails': {'images': [{'uid': '606cf3aaaea14bb598913e803c7b26af',\n",
+              "    'size': 37800,\n",
+              "    'width': 1920,\n",
+              "    'url': 'https://media.sketchfab.com/models/8476c4170df24cf5bbe6967222d1a42d/thumbnails/03709bf568c34654b3ce1913fbf5bd2c/298948d530db40f1b783905cb20edb5d.jpeg',\n",
+              "    'height': 1080},\n",
+              "   {'uid': '143cb32654f14656b689b0ad1bd50d1b',\n",
+              "    'size': 11662,\n",
+              "    'width': 1024,\n",
+              "    'url': 'https://media.sketchfab.com/models/8476c4170df24cf5bbe6967222d1a42d/thumbnails/03709bf568c34654b3ce1913fbf5bd2c/ffa34231b88440a6957f41c4e1c919ec.jpeg',\n",
+              "    'height': 576},\n",
+              "   {'uid': '91fd98a0685044fb81900e1fcf2b047c',\n",
+              "    'size': 6939,\n",
+              "    'width': 720,\n",
+              "    'url': 'https://media.sketchfab.com/models/8476c4170df24cf5bbe6967222d1a42d/thumbnails/03709bf568c34654b3ce1913fbf5bd2c/180f2238f5e3444bb8362306b14c2ecc.jpeg',\n",
+              "    'height': 405},\n",
+              "   {'uid': 'f6219b24d9ff4961b52bc831f20093ee',\n",
+              "    'size': 1756,\n",
+              "    'width': 256,\n",
+              "    'url': 'https://media.sketchfab.com/models/8476c4170df24cf5bbe6967222d1a42d/thumbnails/03709bf568c34654b3ce1913fbf5bd2c/366be192697549b7b73943f8c01fc100.jpeg',\n",
+              "    'height': 144},\n",
+              "   {'uid': '568c9a813b6a4131a96aaf9c038e6c70',\n",
+              "    'size': 550,\n",
+              "    'width': 64,\n",
+              "    'url': 'https://media.sketchfab.com/models/8476c4170df24cf5bbe6967222d1a42d/thumbnails/03709bf568c34654b3ce1913fbf5bd2c/108ea805ed214721acc180c51d1778f8.jpeg',\n",
+              "    'height': 36}]},\n",
+              " 'user': {'uid': 'b50b409d636f4a8e9af2111d370786bf',\n",
+              "  'username': 'agrice',\n",
+              "  'displayName': 'Alan Grice Staircase Co Ltd',\n",
+              "  'profileUrl': 'https://sketchfab.com/agrice',\n",
+              "  'account': 'basic',\n",
+              "  'avatar': {'uri': 'https://api.sketchfab.com/v3/avatars/d17386e905724bd7a5384abd5d2f21e3',\n",
+              "   'images': [{'size': 746,\n",
+              "     'width': 32,\n",
+              "     'url': 'https://media.sketchfab.com/avatars/d17386e905724bd7a5384abd5d2f21e3/339f3f93942b46b5a6ac44217789e298.jpeg',\n",
+              "     'height': 32},\n",
+              "    {'size': 1197,\n",
+              "     'width': 48,\n",
+              "     'url': 'https://media.sketchfab.com/avatars/d17386e905724bd7a5384abd5d2f21e3/6c1955e500b147298447f01354b1a0de.jpeg',\n",
+              "     'height': 48},\n",
+              "    {'size': 3174,\n",
+              "     'width': 90,\n",
+              "     'url': 'https://media.sketchfab.com/avatars/d17386e905724bd7a5384abd5d2f21e3/48fd73eced234a9ba6f94a251d53ad9b.jpeg',\n",
+              "     'height': 90},\n",
+              "    {'size': 3699,\n",
+              "     'width': 100,\n",
+              "     'url': 'https://media.sketchfab.com/avatars/d17386e905724bd7a5384abd5d2f21e3/9d25068a140f4c60b7e55cb63bd7860f.jpeg',\n",
+              "     'height': 100}]},\n",
+              "  'uri': 'https://api.sketchfab.com/v3/users/b50b409d636f4a8e9af2111d370786bf'},\n",
+              " 'description': 'http://staircon.com/ <br>Export by <b>Alan Grice Staircase Co. Ltd</b> (lic 6391)',\n",
+              " 'faceCount': 14608,\n",
+              " 'createdAt': '2021-03-18T09:31:52.190927',\n",
+              " 'vertexCount': 7309,\n",
+              " 'isAgeRestricted': False,\n",
+              " 'archives': {'glb': {'textureCount': 6,\n",
+              "   'size': 1546940,\n",
+              "   'type': 'glb',\n",
+              "   'textureMaxResolution': 1024,\n",
+              "   'faceCount': 14337,\n",
+              "   'vertexCount': 19008},\n",
+              "  'gltf': {'textureCount': 6,\n",
+              "   'size': 932008,\n",
+              "   'type': 'gltf',\n",
+              "   'textureMaxResolution': 1024,\n",
+              "   'faceCount': 14337,\n",
+              "   'vertexCount': 19008},\n",
+              "  'source': {'textureCount': None,\n",
+              "   'size': 1026620,\n",
+              "   'type': 'source',\n",
+              "   'textureMaxResolution': None,\n",
+              "   'faceCount': None,\n",
+              "   'vertexCount': None},\n",
+              "  'usdz': {'textureCount': None,\n",
+              "   'size': 1373035,\n",
+              "   'type': 'usdz',\n",
+              "   'textureMaxResolution': None,\n",
+              "   'faceCount': None,\n",
+              "   'vertexCount': None}},\n",
+              " 'license': 'by'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
         }
       ]
     },
@@ -41822,6 +41919,149 @@
           "execution_count": 13
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "annotations[uids[0]]"
+      ],
+      "metadata": {
+        "id": "bx_89L1p0dj0",
+        "outputId": "a51d674e-809a-4906-c288-81b28f0eaba4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'uri': 'https://api.sketchfab.com/v3/models/8476c4170df24cf5bbe6967222d1a42d',\n",
+              " 'uid': '8476c4170df24cf5bbe6967222d1a42d',\n",
+              " 'name': 'Iain_Dawson_Kew_Road_Formby',\n",
+              " 'staffpickedAt': None,\n",
+              " 'viewCount': 4,\n",
+              " 'likeCount': 0,\n",
+              " 'animationCount': 0,\n",
+              " 'viewerUrl': 'https://sketchfab.com/3d-models/8476c4170df24cf5bbe6967222d1a42d',\n",
+              " 'embedUrl': 'https://sketchfab.com/models/8476c4170df24cf5bbe6967222d1a42d/embed',\n",
+              " 'commentCount': 0,\n",
+              " 'isDownloadable': True,\n",
+              " 'publishedAt': '2021-03-18T09:36:25.430631',\n",
+              " 'tags': [{'name': 'stair',\n",
+              "   'slug': 'stair',\n",
+              "   'uri': 'https://api.sketchfab.com/v3/tags/stair'},\n",
+              "  {'name': 'staircase',\n",
+              "   'slug': 'staircase',\n",
+              "   'uri': 'https://api.sketchfab.com/v3/tags/staircase'},\n",
+              "  {'name': 'staircon',\n",
+              "   'slug': 'staircon',\n",
+              "   'uri': 'https://api.sketchfab.com/v3/tags/staircon'}],\n",
+              " 'categories': [],\n",
+              " 'thumbnails': {'images': [{'uid': '606cf3aaaea14bb598913e803c7b26af',\n",
+              "    'size': 37800,\n",
+              "    'width': 1920,\n",
+              "    'url': 'https://media.sketchfab.com/models/8476c4170df24cf5bbe6967222d1a42d/thumbnails/03709bf568c34654b3ce1913fbf5bd2c/298948d530db40f1b783905cb20edb5d.jpeg',\n",
+              "    'height': 1080},\n",
+              "   {'uid': '143cb32654f14656b689b0ad1bd50d1b',\n",
+              "    'size': 11662,\n",
+              "    'width': 1024,\n",
+              "    'url': 'https://media.sketchfab.com/models/8476c4170df24cf5bbe6967222d1a42d/thumbnails/03709bf568c34654b3ce1913fbf5bd2c/ffa34231b88440a6957f41c4e1c919ec.jpeg',\n",
+              "    'height': 576},\n",
+              "   {'uid': '91fd98a0685044fb81900e1fcf2b047c',\n",
+              "    'size': 6939,\n",
+              "    'width': 720,\n",
+              "    'url': 'https://media.sketchfab.com/models/8476c4170df24cf5bbe6967222d1a42d/thumbnails/03709bf568c34654b3ce1913fbf5bd2c/180f2238f5e3444bb8362306b14c2ecc.jpeg',\n",
+              "    'height': 405},\n",
+              "   {'uid': 'f6219b24d9ff4961b52bc831f20093ee',\n",
+              "    'size': 1756,\n",
+              "    'width': 256,\n",
+              "    'url': 'https://media.sketchfab.com/models/8476c4170df24cf5bbe6967222d1a42d/thumbnails/03709bf568c34654b3ce1913fbf5bd2c/366be192697549b7b73943f8c01fc100.jpeg',\n",
+              "    'height': 144},\n",
+              "   {'uid': '568c9a813b6a4131a96aaf9c038e6c70',\n",
+              "    'size': 550,\n",
+              "    'width': 64,\n",
+              "    'url': 'https://media.sketchfab.com/models/8476c4170df24cf5bbe6967222d1a42d/thumbnails/03709bf568c34654b3ce1913fbf5bd2c/108ea805ed214721acc180c51d1778f8.jpeg',\n",
+              "    'height': 36}]},\n",
+              " 'user': {'uid': 'b50b409d636f4a8e9af2111d370786bf',\n",
+              "  'username': 'agrice',\n",
+              "  'displayName': 'Alan Grice Staircase Co Ltd',\n",
+              "  'profileUrl': 'https://sketchfab.com/agrice',\n",
+              "  'account': 'basic',\n",
+              "  'avatar': {'uri': 'https://api.sketchfab.com/v3/avatars/d17386e905724bd7a5384abd5d2f21e3',\n",
+              "   'images': [{'size': 746,\n",
+              "     'width': 32,\n",
+              "     'url': 'https://media.sketchfab.com/avatars/d17386e905724bd7a5384abd5d2f21e3/339f3f93942b46b5a6ac44217789e298.jpeg',\n",
+              "     'height': 32},\n",
+              "    {'size': 1197,\n",
+              "     'width': 48,\n",
+              "     'url': 'https://media.sketchfab.com/avatars/d17386e905724bd7a5384abd5d2f21e3/6c1955e500b147298447f01354b1a0de.jpeg',\n",
+              "     'height': 48},\n",
+              "    {'size': 3174,\n",
+              "     'width': 90,\n",
+              "     'url': 'https://media.sketchfab.com/avatars/d17386e905724bd7a5384abd5d2f21e3/48fd73eced234a9ba6f94a251d53ad9b.jpeg',\n",
+              "     'height': 90},\n",
+              "    {'size': 3699,\n",
+              "     'width': 100,\n",
+              "     'url': 'https://media.sketchfab.com/avatars/d17386e905724bd7a5384abd5d2f21e3/9d25068a140f4c60b7e55cb63bd7860f.jpeg',\n",
+              "     'height': 100}]},\n",
+              "  'uri': 'https://api.sketchfab.com/v3/users/b50b409d636f4a8e9af2111d370786bf'},\n",
+              " 'description': 'http://staircon.com/ <br>Export by <b>Alan Grice Staircase Co. Ltd</b> (lic 6391)',\n",
+              " 'faceCount': 14608,\n",
+              " 'createdAt': '2021-03-18T09:31:52.190927',\n",
+              " 'vertexCount': 7309,\n",
+              " 'isAgeRestricted': False,\n",
+              " 'archives': {'glb': {'textureCount': 6,\n",
+              "   'size': 1546940,\n",
+              "   'type': 'glb',\n",
+              "   'textureMaxResolution': 1024,\n",
+              "   'faceCount': 14337,\n",
+              "   'vertexCount': 19008},\n",
+              "  'gltf': {'textureCount': 6,\n",
+              "   'size': 932008,\n",
+              "   'type': 'gltf',\n",
+              "   'textureMaxResolution': 1024,\n",
+              "   'faceCount': 14337,\n",
+              "   'vertexCount': 19008},\n",
+              "  'source': {'textureCount': None,\n",
+              "   'size': 1026620,\n",
+              "   'type': 'source',\n",
+              "   'textureMaxResolution': None,\n",
+              "   'faceCount': None,\n",
+              "   'vertexCount': None},\n",
+              "  'usdz': {'textureCount': None,\n",
+              "   'size': 1373035,\n",
+              "   'type': 'usdz',\n",
+              "   'textureMaxResolution': None,\n",
+              "   'faceCount': None,\n",
+              "   'vertexCount': None}},\n",
+              " 'license': 'by'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "use pandas and serialize and sort the descriptions of the 3d model like face count, vertex_count texture count and size, tags, description\n"
+      ],
+      "metadata": {
+        "id": "Rdft0n1l2Xmx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "PUMpxaZM2XBy"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
